# escutcheon

./: Cargo.toml  defaults  handlers  meta  tasks  templates  vars
.github/workflows/: release.yml
Formula/: escutcheon.rb
ansible/roles/ssh-bastion/defaults/: main.yml
ansible/roles/ssh-bastion/handlers/: main.yml
ansible/roles/ssh-bastion/meta/: main.yml
ansible/roles/ssh-bastion/tasks/: authorized_keys.yml  configure.yml  firewall.yml  install.yml  main.yml  packages.yml  service.yml  sshd.yml  tailscale_variant.yml
ansible/roles/ssh-bastion/templates/: knock-sshd.plist.j2  knock-sshd.service.j2  sshd.toml.j2  sshd_config.j2
src/: config.rs  knock.rs  lib.rs  ttl.rs
